# mcp-world

./: .gitignore  README.md
01-basic-test/: main.py  pyproject.toml  server.py
02-mcp-client-scratch/: client_sse.py  client_sse_with_llm.py  client_stdio.py  client_stdio_with_llm.py  main.py  pyproject.toml  requirements.txt
03-job-server-project/: main.py  pyproject.toml  server.py
03-job-server-project/jobs/saved_by_candidate/general/: 44TltshBunenOgDoAAAAAA==.json  EdxQabATkaB6tPKAAAAAAA==.json  J9Co6vAISQN4q8fYAAAAAA==.json  VH_wq0IHZZdEb4-7AAAAAA==.json  eXH8xI7r9TL2k86LAAAAAA==.json
03-job-server-project/jobs/temp/: fetched_jobs_temp.json
04-sampling/: client.py  main.py  pyproject.toml  sampling_handler_example.py  server.py  server_sampling_example.py
