[project]
name = "02-mcp-client-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "fastmcp>=2.10.6",
    "google>=3.0.0",
    "google-adk>=1.8.0",
    "google-auth>=2.40.3",
    "google-cloud-core>=2.4.3",
    "litellm>=1.74.8",
    "mcp>=1.12.1",
    "python-dotenv>=1.1.1",
]
